k8s/elk/canal/canal-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canal-admin
  namespace: es
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canal-admin
  template:
    metadata:
      labels:
        app: canal-admin
    spec:
      containers:
      - name: canal-admin
        image: canal/canal-admin:v1.1.7
        ports:
        - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: canal-admin
  namespace: es
spec:
  selector:
    app: canal-admin
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  type: NodePort
