k8s/elk/canal/canal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canal
  namespace: es
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canal
  template:
    metadata:
      labels:
        app: canal
    spec:
      containers:
      - name: canal
        image: canal/canal-server:v1.1.7
        ports:
        - containerPort: 11111
---
apiVersion: v1
kind: Service
metadata:
  name: canal
  namespace: es
spec:
  selector:
    app: canal
  ports:
    - protocol: TCP
      port: 11111
      targetPort: 11111
  type: ClusterIP
